2003-01-27  Thomas Flynn  <tflynn@users.sourceforge.net>

        * doc/conformance.doc: Update conformance test results.

2003-01-26  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/VrmlMatrix.cpp,
          src/openvrml/OpenVRML/VrmlMatrix.cpp:  Added constructor to
          take a 16-value float array.  Added a setRotate method to
          create a rotation matrix from a Quaternion.

        * src/openvrml/OpenVRML/quaternion.cpp,
          src/openvrml/OpenVRML/quaternion.h:  Added set method to set
          the quaternion value from a 4-element float array.

        * src/openvrml-gl/OpenVRML/GL/Makefile.am,
          src/openvrml-gl/OpenVRML/GL/OpenGLEvent.cpp,
          src/openvrml-gl/OpenVRML/GL/OpenGLEvent.h,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.cpp,
          src/openvrml-gl/OpenVRML/GL/ViewerOpenGL.h:  Modified
          quaternion manipulation code to use Quaternion class.
          Consolidated trackball functions in ViewerOpenGL.cpp; this
          obsoletes OpenGLEvent.cpp and OpenGLEvent.h.

2003-01-25  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/Makefile.am,
          src/openvrml/OpenVRML/quaternion.cpp,
          src/openvrml/OpenVRML/quaternion.h:  Added Quaternion class.

        * src/openvrml/OpenVRML/field.cpp,
          src/openvrml/OpenVRML/field.h:  Construct an SFRotation from a
          Quaternion.  Modified SFRotation::multiply and ::slerp to use
          Quaternion class.

        * src/openvrml/OpenVRML/quaternion.cpp:  Implemented stream
          output operator for Quaternion.

2003-01-24  Braden McDaniel  <braden@endoframe.com>

        * src/openvrml/OpenVRML/browser.cpp:  Convert backslashes in
          output of _fullpath to slashes.

        * README:  Updated dependency list to include FreeType and
          Fontconfig; updated link to Win32 dependencies archive.

2003-01-23  Braden McDaniel  <braden@endoframe.com>
